2008-01-19 TADA Tadashi <sho@spc.gr.jp>
	* misc/lib/hikidoc.rb: updated to 0.0.2.
	* tdiary/wiki_style.rb: added :use_wiki_name and
	:allow_bracket_inline_image option to false to HikiDoc. thanks to ds14050.

2008-01-15 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: fixed #11: error on update with no referer.

2008-01-11 SHIBATA Hiroshi <h-sbt@nifty.com>
	* plugin/00default.rb, plugin/10spamfilter.rb,
	plugin/*/10spamfilter.rb: add option for hide comment-form before
	days considered to be spam.

2008-01-11 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: hide comment form when accessed by bot.

2008-01-08 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: saving recent a few days into volatile.

2008-01-06 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/lang/ja.rb: [workaround] support 'from encoding' specified by @options['encode_from'].

2008-01-05 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: hide comment form when over comments per day on mobile mode.

2008-01-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: unescaped category name because over escape on Wiki
	style.

2007-12-16 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.0.

2007-10-31 TADA Tadashi <sho@spc.gr.jp>
	* skel/conf.rhtml: inserted submit button to page top.

2007-10-07 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: ACCESSKEY changed in mobile mode.
	* plugin/00default.rb: replaced Update link to Edit in mobile navi menu.

2007-08-12 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb, plugin/10spamfilter.rb: support change comment
	description in preference page of spam filter. thanks for hsbt.

2007-08-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, plugin/00default.rb: specify base_url in preference page.

2007-07-17 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: add 'rel="nofollow"' attribute to add/edit navigation.

2007-07-14  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/filter/spam.rb: ignore invalid regular expressions.

2007-06-30 TADA Tadashi <sho@spc.gr.jp>